@@ -1,3 +1,9 @@
+2010-06-13  Joern Rennecke  <joern.rennecke@embecosm.com>
+
+	PR bootstrap/44512
+	* c-cppbuiltin.c (builtin_define_with_hex_fp_value): Add cast
+	for C++ standard compliance.
+
 2010-06-11  Manuel López-Ibáñez  <manu@gcc.gnu.org>
 
         * c-common.c (conversion_warning): Warn at expression
